--- a/client/src/App.css
+++ b/client/src/App.css
@@ -118,3 +118,16 @@
     width: 100%;
   }
 }
+
+/* //Theme Variables */
+ [data-theme="dark"] {
+  --bg-color: #1a1a1a;
+  --card-bg: #2a2a2a;
+  --text-color: white;
+}
+
+[data-theme="light"] {
+  --bg-color: #ffffff;
+  --card-bg: #f9f9f9;
+  --text-color: black;
+}
